--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </head>
-<body class="container-fluid">
-    <h1 class="display-1">This is a simulation game</h1>
+<body class="overflow-hidden">
+    <div class="sticky-top">
+        <h1 class="display-3 bg-dark text-light p-3">Untitled simulation game</h1>
+    </div>
     <p class="lead">this is a lead</p>
+    <div class="row">
+        <div class="col-6">
+            this is the first half
+        </div>
+        <div class="col-6">
+            this is the second half
+        </div>
+    </div>
 </body>
 </html>
